// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel component should render with left positioned by default 1`] = `
.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 10;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
}

<div>
  <aside
    class="c0"
  />
</div>
`;

exports[`SidePanel component should render with right positioned when position prop given as right 1`] = `
.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 10;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  right: 0;
}

<div>
  <aside
    class="c0"
  />
</div>
`;
